--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+slimbookintelcontroller (0.0.3) focal; urgency=low
+
+  * Autostart timing adjustments.
+
+ -- slimbook <dev@slimbook.es>  Thu, 22 Jul 2021 13:08:02 +0200
+
+slimbookintelcontroller (0.0.2) focal; urgency=low
+
+  * Initial release.
+
+ -- slimbook <dev@slimbook.es>  Tue, 13 Jul 2021 13:08:02 +0200
+
 slimbookintelcontroller (0.0.1) focal; urgency=low
 
   * Initial release.
