--- a/src/locale/slimbookintelcontrollerindicator.template.po
+++ b/src/locale/slimbookintelcontrollerindicator.template.po
@@ -4,34 +4,36 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: slimbookintelcontroller\n"
 "POT-Creation-Date: 2021-09-27 16:51+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2021-10-24 15:53+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
-
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: Albano Battistella <albano_battistella@hotmail.com>\n"
+"Language-Team: Albano Battistella  albano_battistella@hotmail.com\n"
+"Language: it_IT\n"
+"X-Generator: Poedit 3.0\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #: slimbookintelcontrollerindicator.py:119
 msgid "Low performance"
-msgstr ""
+msgstr "Basse prestazioni"
 
 #: slimbookintelcontrollerindicator.py:123
 msgid "Medium performance"
-msgstr ""
+msgstr "Medie prestazioni"
 
 #: slimbookintelcontrollerindicator.py:128
 msgid "High performance"
-msgstr ""
+msgstr "Alte prestazioni"
 
 #: slimbookintelcontrollerindicator.py:132
 msgid "Preferences"
-msgstr ""
+msgstr "Preferenze"
 
 #: slimbookintelcontrollerindicator.py:137
 msgid "Exit"
-msgstr ""
-
+msgstr "Esci"
