--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+slimbookintelcontroller (0.3beta) focal; urgency=low
+
+  * Improved code
+
+ -- slimbook <dev@slimbook.es>  Tue, 19 Oct 2021 13:08:02 +0200
+
 slimbookintelcontroller (0.2beta) focal; urgency=low
 
   * Added configuration check
