--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+slimbookintelcontroller (0.4beta) focal; urgency=low
+
+  * Improved code
+  * Fixed bugs
+
+ -- slimbook <dev@slimbook.es>  Wed, 27 Apr 2022 16:04:21 +0200
+
 slimbookintelcontroller (0.3beta) focal; urgency=low
 
   * Improved code
