--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+slimbookintelcontroller (0.5beta) focal; urgency=low
+
+  * Added support for P line_sufix processors.
+  * Added new Executiive processor.
+  * Changed logo.
+  * Added https://github.com/slimbook/slimbookintelcontroller/pull/9 solving conflicts.
+  * Removed dependency: gnome-shell-extension-appindicator
+
+ -- slimbook <dev@slimbook.es>  Wed, 27 Apr 2022 16:04:21 +0200
+
+slimbookintelcontroller (0.4beta) focal; urgency=low
+
+  * Improved code
+  * Fixed bugs
+
+ -- slimbook <dev@slimbook.es>  Wed, 27 Apr 2022 16:04:21 +0200
+
 slimbookintelcontroller (0.3beta) focal; urgency=low
 
   * Improved code
