--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
+slimbookintelcontroller (0.7beta) jammy; urgency=low
+
+  * Fixed custom value setting bug
+  * Fix autostart directory permissions
+
+ -- slimbook <dev@slimbook.es>  Wed, 9 Nov 2022 16:04:21 +0200
+
 slimbookintelcontroller (0.6beta) jammy; urgency=low
 
   * Removed dependencies
   * Fixed custom value setting bug
   * Fix autostart directory permissions
 
- -- slimbook <dev@slimbook.es>  Wed, 9 Nov 2022 16:04:21 +0200
+ -- slimbook <dev@slimbook.es>  Thu, 8 Sep 2022 16:04:21 +0200
 
 slimbookintelcontroller (0.5beta) jammy; urgency=low
 
